Prevent parametric wrapper from stretching

--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -47,7 +47,7 @@ body {
 }
 
 .parameteric-wrapper {
-  flex: 1;
+  flex: 0;
   gap: $spacing-s;
 }
 
